add media_url in contents table
