# public/docs/openapi.yaml
@@ -139,20 +139,11 @@ paths:
                   example: '"https://example.com/image.jpg"'
                 content:
                   type: string
-                  description: ''
-                  example: null
-                link:
-                  type: string
-                  description: 'optional The URL to which the ad redirects.'
-                  example: '"https://example.com"'
-                active:
-                  type: boolean
-                  description: 'Whether the ad is active.'
-                  example: true
+                  description: 'optinal required The URL of the ad image.'
+                  example: '"https://example.com/image.jpg"'
               required:
                 - title
                 - image_url
-                - active
       security: []
   '/api/ads/{id}':
     get:
@@ -821,11 +812,11 @@ paths:
                 category_id:
                   type: integer
                   description: ''
-                  example: 8
+                  example: 1
                 content_type_id:
                   type: integer
                   description: ''
-                  example: 6
+                  example: 13
               required:
                 - category_id
                 - content_type_id
@@ -1100,6 +1091,10 @@ paths:
                   type: string
                   description: "The path to the content's image."
                   example: /images/programming.jpg
+                media_url:
+                  type: string
+                  description: "The path to the content's media."
+                  example: /images/programming.jpg
                 type_id:
                   type: integer
                   description: 'The ID of the content type.'
@@ -1113,6 +1108,7 @@ paths:
                 - description
                 - category_id
                 - image_path
+                - media_url
                 - type_id
                 - user_id
       security: []
@@ -1378,6 +1374,10 @@ paths:
                 image_path:
                   type: string
                   description: "The path to the content's image."
+                  example: /images/programming.jpg
+                media_url:
+                  type: string
+                  description: "The path to the content's media."
                   example: /images/programming.jpg
                 type_id:
                   type: integer
@@ -1648,6 +1648,27 @@ paths:
         schema:
           type: integer
   /api/users:
+    get:
+      summary: ''
+      operationId: getApiUsers
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
     post:
       summary: ''
       operationId: postApiUsers
@@ -1666,20 +1687,51 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: excepturi
+                  example: sint
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: king.connie@example.org
+                  example: conn.alene@example.com
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: '4a@3ENL_fJc{8N_0'
+                  example: '}QQ(p#FmS5zPIb~!)Yx'
               required:
                 - name
                 - email
                 - password
       security: []
+  '/api/users/{id}':
+    get:
+      summary: ''
+      operationId: getApiUsersId
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the user.'
+        example: enim
+        required: true
+        schema:
+          type: string
   /api/media:
     get:
       summary: 'Get all media.'
